client/src/components/PageContentEditor/PageContentEditor.module.css
.editor {
    width: 100%;
    border-radius: 22.5px 0 0 22.5px;
    outline: none;
    border: solid 1.5px rgba(0,0,0,0);
    box-sizing: border-box;
    resize: none;
    background: none;
    padding: 1rem;
    overflow: hidden;
    line-height: 1.5rem;
}

.editor:focus {
    outline: none;
    border: solid 1.5px rgba(0,0,0,0);
}

